[bugfix] work on iOS devices

--- a/src/app/components/game/game.component.css
+++ b/src/app/components/game/game.component.css
@@ -4,24 +4,27 @@
 
 :host {
   display: flex;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
-  overflow: hidden;
-  flex-direction: column;
-  align-items: center;
-  max-height: 100vw;
 }
 
 #streams {
-  flex-basis: 100%;
   position: relative;
   display: inline-block;
-  aspect-ratio: 1/1;
-  max-width: 100%;
-  max-height: 960px;
+  width: 80vh;
+  height: 80vh;
   background-image: url(/assets/mensch_aergere_dich_nicht_6_spieler.png);
   background-size: 100%;
   border: solid 1px #999;
+}
+
+@media (orientation: portrait) {
+  #streams {
+    width: 90vw;
+    height: 90vw;
+  }
 }
 
 ::ng-deep #streams canvas {
@@ -40,7 +43,7 @@
 
 .dice {
   transform: translate(-8rem, -8rem);
-  perspective: 600px;
+  perspective: 1000px;
   position: absolute;
   bottom: 4rem;
   right: 4rem;
